Fix another layout issue with widget column on blog page
Increase left hand padding on widget column to match layout of single-post pages.

--- a/CSS/src_cr-new.less
+++ b/CSS/src_cr-new.less
@@ -838,6 +838,12 @@ body:not(.crimson-key-home):not(.crimson-key) .row.h1-header .column {
 	}
 }
 
+.blog .fluid .row.side-right .column.two {
+	@media screen and (min-width: 694px) {
+		padding-left: 1rem;
+	}
+}
+
 .single-post .widget_search input#s {
 	margin-bottom: .5rem;
 	width: 100%;
@@ -1020,7 +1026,7 @@ article > div.article-body {
 
 @media screen and (min-width: 694px) {
 	.blog main > .row > .column.two,
-					.single-post .row > .column.two {
+	.single-post .row > .column.two {
 		margin-top: 2rem;
 		border-radius: 4px;
 	}
